examples/modules/expected/0906-modules-unique-hidden-static-not-visible.stderr
error: type 'Hidden' is not visible; #import the module that declares it
  --> examples/modules/0906-modules-unique-hidden-static-not-visible.sx:7:14
   |
 7 |     value := Hidden.make();
   |              ^^^^^^
